--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,12 +8,15 @@ environment:
 
 dependencies:
   bloc: ^8.1.3
+  fl_location: ^3.1.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
+  pref: ^2.8.0
+  record: ^5.1.1
 
 dev_dependencies:
   bloc_test: ^9.1.6
