--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_bloc: ^8.1.4
   flutter_localizations:
     sdk: flutter
+  heart_rate_flutter: ^0.0.2
   intl: ^0.19.0
   pref: ^2.8.0
   record: ^5.1.1
