--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,21 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
+  flutter_easy_animations: ^0.0.2
   flutter_layout_grid: ^2.0.0
   flutter_localizations:
     sdk: flutter
   heart_rate_flutter: ^0.0.2
+  http: ^1.2.1
   intl: ^0.19.0
+  path: ^1.9.0
+  path_provider: ^2.1.3
   pref: ^2.8.0
-  record: ^5.1.2
+  record:
+    git:
+      url: https://github.com/CsabaConsulting/record.git
+      path: record
+  speech_to_text: ^6.6.2
   statemachine: ^3.3.1
 
 dev_dependencies:
