--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_layout_grid: ^2.0.0
   flutter_localizations:
     sdk: flutter
+  google_generative_ai: ^0.4.3
   heart_rate_flutter: ^0.0.2
   http: ^1.2.1
   intl: ^0.19.0
