--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   bloc: ^8.1.3
   dart_helper_utils: ^2.0.0
   daylight: ^3.1.0
+  file_picker: ^8.0.5
   fl_location: ^3.1.0
   flex_color_scheme: ^7.3.1
   flutter:
