--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,7 +20,7 @@ jobs:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
       flutter_channel: stable
-      setup: echo "const geminiApiKey = 'a';\n'const chirpToken = 'a';\nconst alphaVantageAccessKey = 'a';\nconst tavilyApiKey = 'a';\n" >> lib/secrets.dart
+      setup: echo "const geminiApiKey = 'a';\nconst chirpToken = 'a';\nconst alphaVantageAccessKey = 'a';\nconst tavilyApiKey = 'a';\n" >> lib/secrets.dart
 
   spell-check:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/spell_check.yml@v1
