Trying another different way of multi line secrets file mocking (previous got formatted). There's no way to exclude files from formatting: https://github.com/VeryGoodOpenSource/very_good_workflows/issues/170

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,11 +21,10 @@ jobs:
     with:
       flutter_channel: stable
       setup: |
-        echo "const geminiApiKey = 'a';
-        const chirpToken = 'a';
-        const alphaVantageAccessKey = 'a';
-        const tavilyApiKey = 'a';
-        " > lib/secrets.dart
+        echo "const geminiApiKey = 'a';" > lib/secrets.dart
+        echo "const chirpToken = 'a';" >> lib/secrets.dart
+        echo "const alphaVantageAccessKey = 'a';" >> lib/secrets.dart
+        echo "const tavilyApiKey = 'a';" >> lib/secrets.dart
 
   spell-check:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/spell_check.yml@v1
