--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,9 @@ publish_to: none
 environment:
   sdk: ^3.4.0
 
+dependency_overrides:
+  js: ^0.7.1  # Due to media_kit vs speech_to_text collision
+
 dependencies:
   bloc: ^8.1.3
   dart_helper_utils: ^2.0.0
@@ -25,6 +28,8 @@ dependencies:
   heart_rate_flutter: ^0.0.2
   http: ^1.2.1
   intl: ^0.19.0
+  media_kit: ^1.1.10
+  media_kit_libs_audio: ^1.0.4
   path: ^1.9.0
   path_provider: ^2.1.3
   pref: ^2.8.0
