--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,7 @@ dependencies:
   path: ^1.9.0
   path_provider: ^2.1.3
   pref: ^2.8.0
-  record:
-    git:
-      url: https://github.com/CsabaConsulting/record.git
-      path: record
+  record: ^5.1.2
   speech_to_text: ^6.6.2
   statemachine: ^3.3.1
 
