--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   record: ^5.1.2
   speech_to_text: ^6.6.2
   statemachine: ^3.3.1
+  tuple: ^2.0.2
 
 dev_dependencies:
   bloc_test: ^9.1.6
