--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependency_overrides:
   js: ^0.7.1  # Due to media_kit vs speech_to_text collision
 
 dependencies:
+  adaptive_dialog: ^2.1.0
   bloc: ^8.1.3
   dart_helper_utils: ^2.2.1
   daylight: ^3.1.0
@@ -28,8 +29,11 @@ dependencies:
   heart_rate_flutter: ^0.0.2
   http: ^1.2.2
   intl: ^0.19.0
+  listview_utils_plus: ^0.0.3
   media_kit: ^1.1.10
   media_kit_libs_audio: ^1.0.4
+  objectbox: ^4.0.1
+  objectbox_flutter_libs: ^4.0.1
   path: ^1.9.0
   path_provider: ^2.1.4
   pref: ^2.8.0
@@ -40,9 +44,11 @@ dependencies:
 
 dev_dependencies:
   bloc_test: ^9.1.6
+  build_runner: ^2.4.11
   flutter_test:
     sdk: flutter
   mocktail: ^1.0.3
+  objectbox_generator: ^4.0.1
   very_good_analysis: ^6.0.0
 
 flutter:
