--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   record: ^5.1.2
   speech_to_text: ^6.6.2
   statemachine: ^3.3.1
+  strings: ^3.1.2
   tuple: ^2.0.2
 
 dev_dependencies:
