--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependency_overrides:
 dependencies:
   adaptive_dialog: ^2.1.0
   bloc: ^8.1.3
+  camera: ^0.11.0+2
   collection: ^1.19.0
   dart_helper_utils: ^2.3.0
   daylight: ^3.1.0
