Starting rebranding inspector gadget -> Open MMPA

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: inspector_gadget
-description: Inspector Gadget
+description: Open Multi-Modal Personal Assistant
 version: 1.0.0+1
 publish_to: none
 
