--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependency_overrides:
 
 dependencies:
   adaptive_dialog: ^2.1.0
+  assorted_layout_widgets: ^9.0.2
   bloc: ^8.1.3
   camera: ^0.11.0+2
   collection: ^1.19.0
