--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   bloc: ^8.1.3
   camera: ^0.11.0+2
   collection: ^1.19.0
+  country_flags: ^3.0.0
   dart_helper_utils: ^2.3.0
   daylight: ^3.1.0
   file_picker: ^8.0.7
@@ -28,6 +29,7 @@ dependencies:
   flutter_layout_grid: ^2.0.0
   flutter_localizations:
     sdk: flutter
+  flutter_localized_locales: ^2.0.5
   flutter_tts: ^4.0.2
   google_generative_ai: ^0.4.4
   heart_rate_flutter: ^0.0.2
