--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   speech_to_text: ^7.0.0-beta.3
   statemachine: ^3.3.1
   strings: ^3.1.2
+  translator: ^1.0.0
   tuple: ^2.0.2
 
 dev_dependencies:
