--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   camera: ^0.11.0+2
   collection: ^1.19.0
   country_flags: ^3.0.0
-  dart_helper_utils: ^2.4.0
+  dart_helper_utils: ^2.5.1
   daylight: ^3.1.0
   file_picker: ^8.1.2
   fl_location: ^4.0.0
@@ -44,7 +44,7 @@ dependencies:
   path_provider: ^2.1.4
   pref: ^2.8.0
   record: ^5.1.2
-  speech_to_text: ^7.0.0-beta.3
+  speech_to_text: ^7.0.0
   statemachine: ^3.3.1
   strings: ^3.1.2
   translator: ^1.0.0
