--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,9 @@ dependencies:
   http: ^1.2.2
   intl: ^0.19.0
   listview_utils_plus: ^0.0.3
-  media_kit: ^1.1.10
-  media_kit_libs_audio: ^1.0.4
+  media_kit: ^1.1.11
+  media_kit_libs_audio: ^1.0.5
+  mime: ^1.0.5
   number_selector: ^1.0.7
   objectbox: ^4.0.2
   objectbox_flutter_libs: ^4.0.2
@@ -49,6 +50,7 @@ dependencies:
   strings: ^3.1.2
   translator: ^1.0.0
   tuple: ^2.0.2
+  video_player: ^2.9.1
   watch_it: ^1.4.2
 
 dev_dependencies:
