Files generated by CLI and console for Firebase Vertex AI, we leave the ignores in here for the future

--- a/.gitignore
+++ b/.gitignore
@@ -111,5 +111,9 @@ app.*.map.json
 !.idea/dictionaries/
 !.idea/runConfigurations/
 
+# Project secrets
 secrets.dart
 untranslated_messages.txt
+firebase.json
+lib/firebase_options.dart
+android/app/google-services.json
