--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   dart_helper_utils: ^2.5.2
   daylight: ^3.1.0
   file_picker: ^8.1.2
-  fl_location: ^4.1.0
+  fl_location: ^4.1.0+1
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
