Foundations for firebase_vertexai version, BYO Firebase Project #53 Currently battling with [firebase_functions/internal] Response is not valid JSON object. errorCode: firebase_functions errorMessage: com.google.firebase.functions.FirebaseFunctionsException: Response is not valid JSON object.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     id "com.android.application"
+    // START: FlutterFire Configuration
+    id "com.google.gms.google-services"
+    // END: FlutterFire Configuration
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
 }
@@ -113,4 +116,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.10"
+    // implementation "com.google.gms.google-services:4.4.2"
 }
