--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,6 +52,7 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true
         applicationId "dev.csaba.inspector_gadget"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
@@ -116,5 +117,7 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.10"
+    implementation "com.google.firebase:firebase-appcheck-ktx:18.0.0"
+    implementation "com.google.firebase:firebase-appcheck-debug:18.0.0"
     // implementation "com.google.gms.google-services:4.4.2"
 }
