--- a/functions/requirements.txt
+++ b/functions/requirements.txt
@@ -1,5 +1,5 @@
-firebase_functions~=0.1.0
-google-api-core==2.19.0
-google-cloud-logging==3.10.0
-google-cloud-speech==2.26.0
-google-cloud-texttospeech==2.16.3
+firebase_functions~=0.4.2
+google-api-core~=2.21.0
+google-cloud-logging~=3.11.3
+google-cloud-speech~=2.27.0
+google-cloud-texttospeech~=2.18.0
