--- a/functions/requirements.txt
+++ b/functions/requirements.txt
@@ -3,3 +3,4 @@ google-api-core~=2.21.0
 google-cloud-logging~=3.11.3
 google-cloud-speech~=2.27.0
 google-cloud-texttospeech~=2.18.0
+vertexai~=1.70.0
