--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,9 @@ environment:
   sdk: ^3.5.3
 
 dependency_overrides:
-  collection: ^1.19.0  # Flutter SDK (flutter_test pinned it)
-  js: ^0.7.1  # media_kit vs speech_to_text
-  web: ^1.0.0  # firebase_vertexai -> firebase_core_web -> web vs file_picker -> web
+  collection: ^1.19.1  # Flutter SDK (flutter_test pinned it)
+  # js: ^0.7.1  # media_kit vs speech_to_text
+  mime: ^2.0.0
 
 dependencies:
   adaptive_dialog: ^2.2.1+2
@@ -20,11 +20,11 @@ dependencies:
   country_flags: ^3.0.0
   dart_helper_utils: ^2.7.0
   daylight: ^3.1.0
-  file_picker: ^8.1.2
-  firebase_app_check: ^0.3.1+3
+  file_picker: ^8.1.3
+  firebase_app_check: ^0.3.1+4
   firebase_auth: ^5.3.1
   firebase_core: ^3.6.0
-  firebase_storage: ^12.3.2
+  firebase_storage: ^12.3.4
   firebase_ui_storage: ^2.1.0
   firebase_vertexai: ^0.2.3+4
   fl_location: ^4.1.0+1
@@ -38,17 +38,17 @@ dependencies:
   flutter_localized_locales: ^2.0.5
   flutter_tts: ^4.0.2
   gap: ^3.0.1
-  get_it: ^8.0.0
+  get_it: ^8.0.1
   heart_rate_flutter: ^0.0.2
   http: ^1.2.2
   intl: ^0.19.0
   listview_utils_plus: ^0.0.3
   media_kit: ^1.1.11
   media_kit_libs_audio: ^1.0.5
-  mime: ^1.0.6
+  mime: ^2.0.0
   number_selector: ^1.0.7
-  objectbox: ^4.0.2
-  objectbox_flutter_libs: ^4.0.2
+  objectbox: ^4.0.3
+  objectbox_flutter_libs: ^4.0.3
   path: ^1.9.0
   path_provider: ^2.1.4
   pref: ^2.8.0
@@ -67,7 +67,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mocktail: ^1.0.3
-  objectbox_generator: ^4.0.2
+  objectbox_generator: ^4.0.3
   very_good_analysis: ^6.0.0
 
 flutter:
