--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_storage: ^12.3.4
   firebase_ui_storage: ^2.1.0
-  firebase_vertexai: ^0.2.3+4
+  firebase_vertexai: ^1.0.1
   fl_location: ^4.1.0+1
   flex_color_scheme: ^7.3.1
   flutter:
