--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,12 +8,11 @@ environment:
 
 dependency_overrides:
   collection: ^1.19.1  # Flutter SDK (flutter_test pinned it)
-  # js: ^0.7.1  # media_kit vs speech_to_text
   mime: ^2.0.0
 
 dependencies:
   adaptive_dialog: ^2.2.1+2
-  assorted_layout_widgets: ^9.0.2
+  assorted_layout_widgets: ^10.0.3
   camera: ^0.11.0+2
   cloud_functions: ^5.1.3
   collection: ^1.19.0
@@ -27,7 +26,7 @@ dependencies:
   firebase_storage: ^12.3.4
   firebase_ui_storage: ^2.1.0
   firebase_vertexai: ^1.0.1
-  fl_location: ^4.1.0+1
+  fl_location: ^4.3.0
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
@@ -50,7 +49,7 @@ dependencies:
   objectbox: ^4.0.3
   objectbox_flutter_libs: ^4.0.3
   path: ^1.9.0
-  path_provider: ^2.1.4
+  path_provider: ^2.1.5
   pref: ^2.8.0
   record: ^5.1.2
   smooth_page_indicator: ^1.2.0+3
