--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.2+1
 publish_to: none
 
 environment:
-  sdk: ^3.5.3
+  sdk: ^3.5.4
 
 dependency_overrides:
   collection: ^1.19.1  # Flutter SDK (flutter_test pinned it)
@@ -14,20 +14,20 @@ dependencies:
   adaptive_dialog: ^2.2.1+2
   assorted_layout_widgets: ^10.0.4
   camera: ^0.11.0+2
-  cloud_functions: ^5.1.4
+  cloud_functions: ^5.1.5
   collection: ^1.19.0
   country_flags: ^3.0.0
   dart_helper_utils: ^3.0.0
   daylight: ^3.1.0
   file_picker: ^8.1.4
-  firebase_app_check: ^0.3.1+5
-  firebase_auth: ^5.3.2
-  firebase_core: ^3.7.0
-  firebase_storage: ^12.3.5
+  firebase_app_check: ^0.3.1+6
+  firebase_auth: ^5.3.3
+  firebase_core: ^3.8.0
+  firebase_storage: ^12.3.6
   firebase_ui_storage: ^2.1.0
-  firebase_vertexai: ^1.0.2
-  fl_location: ^4.4.2
-  flex_color_scheme: ^8.0.0
+  firebase_vertexai: ^1.0.3
+  fl_location: ^5.0.0
+  flex_color_scheme: ^8.0.1
   flutter:
     sdk: flutter
   flutter_easy_animations: ^0.0.2
@@ -35,7 +35,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_localized_locales: ^2.0.5
-  flutter_tts: ^4.1.0
+  flutter_tts: ^4.2.0
   gap: ^3.0.1
   get_it: ^8.0.2
   heart_rate_flutter: ^0.0.2
@@ -56,7 +56,7 @@ dependencies:
   speech_to_text: ^7.0.0
   statemachine: ^3.3.1
   strings: ^3.1.2
-  translator: ^1.0.0
+  translator: ^1.0.3+1
   tuple: ^2.0.2
   video_player: ^2.9.2
   watch_it: ^1.5.1
