--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependency_overrides:
   collection: ^1.19.1  # Flutter SDK (flutter_test pinned it)
   mime: ^2.0.0
+  path: ^1.9.1  # Flutter SDK (flutter_test pinned it)
 
 dependencies:
   adaptive_dialog: ^2.3.0
@@ -37,7 +38,7 @@ dependencies:
   flutter_localized_locales: ^2.0.5
   flutter_tts: ^4.2.0
   gap: ^3.0.1
-  get_it: ^8.0.2
+  get_it: ^8.0.3
   heart_rate_flutter: ^0.0.2
   http: ^1.2.2
   intl: ^0.19.0
@@ -48,7 +49,7 @@ dependencies:
   number_selector: ^1.0.7
   objectbox: ^4.0.3
   objectbox_flutter_libs: ^4.0.3
-  path: ^1.9.0
+  path: ^1.9.1
   path_provider: ^2.1.5
   pref: ^2.8.0
   record: ^5.2.0
@@ -59,7 +60,7 @@ dependencies:
   translator: ^1.0.3+1
   tuple: ^2.0.2
   video_player: ^2.9.2
-  watch_it: ^1.6.0
+  watch_it: ^1.6.1
 
 dev_dependencies:
   build_runner: ^2.4.12
