--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   path: ^1.9.1
   path_provider: ^2.1.5
   pref: ^2.8.0
+  progress_indicators: ^1.0.0
   record: ^5.2.0
   smooth_page_indicator: ^1.2.0+3
   speech_to_text: ^7.0.0
